--- a/class10.html
+++ b/class10.html
@@ -33,6 +33,8 @@
 </head>
 <body>
   <header>
+    <div id="google_translate_element" style="text-align: right; margin: 20px;"></div>
+
     <div class="container">
       <h1>📘 Class 10 Government Jobs</h1>
       <p>Explore Sarkari Naukri options after Class 10 with free resources, videos, PDFs and tips</p>
@@ -107,5 +109,19 @@
       <p>© 2025 Naukri Saathi | All resources are free & official</p>
     </div>
   </footer>
+<!-- Google Translate scripts -->
+<script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement({
+      pageLanguage: 'en',
+      includedLanguages: 'en,as,hi,bn',
+      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+    }, 'google_translate_element');
+  }
+</script>
+<script type="text/javascript"
+  src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+</script>
+
 </body>
 </html>
