--- a/class10.html
+++ b/class10.html
@@ -49,7 +49,7 @@
 
       <h3>🏛️ Central Level Exams (All India)</h3>
       <ul class="job-summary">
-        <li><strong>1. SSC MTS & Havaldar:</strong><br>➡️ Office helper jobs and Havaldar posts in central government departments.<br>✅ Class 10 pass<br>🌍 All over India<br>💰 Salary (Per Month): ₹23,000–₹25,000</li>
+        <li><strong><a href="ssc-mts.html">1. SSC MTS & Havaldar:</strong><br>➡️ Office helper jobs and Havaldar posts in central government departments.<br>✅ Class 10 pass<br>🌍 All over India<br>💰 Salary (Per Month): ₹23,000–₹25,000</li>
         <li><strong>2. SSC GD Constable:</strong><br>➡️ Join BSF, CRPF, CISF, ITBP, SSB, or SSF as a police constable.<br>✅ Class 10 pass<br>💪 Physical test needed<br>💰 Salary (Per Month): ₹30,000–₹32,000</li>
         <li><strong>3. RRB Group D:</strong><br>➡️ Jobs in Indian Railways like helper, track maintainer, porter, etc.<br>✅ Class 10 pass<br>🚆 Good for railway job lovers<br>💰 Salary (Per Month): ₹22,000–₹25,000</li>
         <li><strong>4. Indian Post GDS (Gramin Dak Sevak)</strong><br>➡️ Post office jobs in villages and towns.<br>✅ Class 10 pass with good marks in Maths & English<br>📬 No exam – selection by marks<br>💰 Salary (Per Month): ₹10,000–₹14,500</li>
