--- a/ssc-mts.html
+++ b/ssc-mts.html
@@ -9,6 +9,8 @@
     body {
       font-family: sans-serif;
       line-height: 1.6;
+      background-color: #fdf6e3; /* paper-like background */
+      color: #333;
     }
     .container {
       max-width: 800px;
@@ -48,6 +50,9 @@
 <body>
   <div class="container">
     <a href="class10.html" class="back-link">← Back to Class 10 Jobs</a>
+
+    <!-- Google Translate dropdown -->
+    <div id="google_translate_element" style="text-align: right; margin-bottom: 20px;"></div>
 
     <h1>1. 🧾 SSC MTS Exam (Including Havaldar)</h1>
 
@@ -152,5 +157,19 @@
 
     <p><strong>Note:</strong> This is a general template. All official links and dates will be updated after notification release.</p>
   </div>
+
+  <!-- Google Translate scripts -->
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'en',
+        includedLanguages: 'en,as,hi,bn',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+      }, 'google_translate_element');
+    }
+  </script>
+  <script type="text/javascript"
+    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+  </script>
 </body>
 </html>
