--- a/ssc-mts.html
+++ b/ssc-mts.html
@@ -139,11 +139,17 @@
 
     <section>
       <h2>🔗 Free Study Resources</h2>
-      <ul>
-        <li>YouTube Playlist: <a href="#">SSC MTS Preparation</a></li>
-        <li>PDF: <a href="#">SSC MTS Syllabus 2025</a></li>
-        <li>Previous Year Papers: <a href="#">Download PDF</a></li>
-      </ul>
+<section>
+  <h2>🔗 Free Study Resources</h2>
+  <ul>
+    <li>PDF: <a href="https://ssc.gov.in/api/attachment/uploads/masterData/NoticeBoards/Notice_of_adv_mts_2025.pdf" target="_blank">SSC MTS Notification & Syllabus 2025</a></li>
+    <li>Previous Year Papers (PDF): <a href="https://www.adda247.com/jobs/ssc-mts-previous-year-question-paper/?srsltid=AfmBOopseocwHpzcP-3uMsAEgtxRYAB5NWxFBdpDYeWwJEaNBklRqz8l" target="_blank">Download SSC MTS PYQs (Adda247)</a></li>
+    <li>YouTube Playlist (GK & GS): <a href="https://www.youtube.com/watch?v=5gpYfv-vQUw" target="_blank">SSC MTS GK GS Classes 2025</a></li>
+    <li>YouTube Playlist (Reasoning): <a href="https://www.youtube.com/watch?v=QyJDGPdSUU4" target="_blank">SSC MTS Reasoning Most Important Questions</a></li>
+    <li>Official Website: <a href="https://ssc.nic.in" target="_blank">ssc.nic.in</a></li>
+  </ul>
+</section>
+
     </section>
 
     <section>
