--- a/ssc-mts.html
+++ b/ssc-mts.html
@@ -139,15 +139,23 @@
 <section>
   <h2>🔗 Free Study Resources</h2>
   <ul>
-    <li>PDF: <a href="https://ssc.gov.in/api/attachment/uploads/masterData/NoticeBoards/Notice_of_adv_mts_2025.pdf" target="_blank">SSC MTS Notification & Syllabus 2025</a></li>
+    <li>Official Notification: <a href="https://ssc.gov.in/api/attachment/uploads/masterData/NoticeBoards/Notice_of_adv_mts_2025.pdf" target="_blank">SSC MTS Notification & Syllabus 2025</a></li>
     <li>Previous Year Papers (PDF): <a href="https://www.adda247.com/jobs/ssc-mts-previous-year-question-paper/?srsltid=AfmBOopseocwHpzcP-3uMsAEgtxRYAB5NWxFBdpDYeWwJEaNBklRqz8l" target="_blank">Download SSC MTS PYQs (Adda247)</a></li>
-    <li>YouTube Playlist (GK & GS): <a href="https://www.youtube.com/watch?v=5gpYfv-vQUw" target="_blank">SSC MTS GK GS Classes 2025</a></li>
-    <li>YouTube Playlist (Reasoning): <a href="https://www.youtube.com/watch?v=QyJDGPdSUU4" target="_blank">SSC MTS Reasoning Most Important Questions</a></li>
-    <li>Maths Playlist: <a href="https://www.youtube.com/playlist?list=PLxtzKdPI7iWOz8A59uDwJB6mzxPggHduJ" target="_blank">SSC MTS Maths Preparation 2024 – Full Playlist</a></li>
-    <li>English Playlist: <a href="https://www.youtube.com/playlist?list=PLY5Fr2gk1HQCYnoxFjtjgJLN-Rg0w6FOQ" target="_blank">SSC MTS English Chapter‑Wise Playlist</a></li>
+  </ul>
+
+  <h3>YouTube Study Links:</h3>
+  <ul>
+    <li>🧠 Reasoning: <a href="https://www.youtube.com/watch?v=QyJDGPdSUU4" target="_blank">Important Reasoning Questions</a></li>
+    <li>📚 General Awareness: <a href="https://www.youtube.com/watch?v=5gpYfv-vQUw" target="_blank">GK/GS Classes 2025</a></li>
+    <li>🧮 Maths: <a href="https://www.youtube.com/playlist?list=PLxtzKdPI7iWOz8A59uDwJB6mzxPggHduJ" target="_blank">Maths Preparation Playlist</a></li>
+    <li>📝 English: <a href="https://www.youtube.com/playlist?list=PLY5Fr2gk1HQCYnoxFjtjgJLN-Rg0w6FOQ" target="_blank">English Chapter-Wise Playlist</a></li>
+  </ul>
+
+  <ul>
     <li>Official Website: <a href="https://ssc.nic.in" target="_blank">ssc.nic.in</a></li>
   </ul>
 </section>
+
 
     </section>
 
