--- a/ssc-mts.html
+++ b/ssc-mts.html
@@ -139,7 +139,7 @@
 <section>
   <h2>🔗 Free Study Resources</h2>
   <ul>
-    <li>Official Notification: <a href="https://ssc.gov.in/api/attachment/uploads/masterData/NoticeBoards/Notice_of_adv_mts_2025.pdf" target="_blank">SSC MTS Notification & Syllabus 2025</a></li>
+    <li>PDF: <a href="https://ssc.gov.in/api/attachment/uploads/masterData/NoticeBoards/Notice_of_adv_mts_2025.pdf" target="_blank">SSC MTS Notification & Syllabus 2025</a></li>
     <li>Previous Year Papers (PDF): <a href="https://www.adda247.com/jobs/ssc-mts-previous-year-question-paper/?srsltid=AfmBOopseocwHpzcP-3uMsAEgtxRYAB5NWxFBdpDYeWwJEaNBklRqz8l" target="_blank">Download SSC MTS PYQs (Adda247)</a></li>
   </ul>
 
@@ -155,6 +155,7 @@
     <li>Official Website: <a href="https://ssc.nic.in" target="_blank">ssc.nic.in</a></li>
   </ul>
 </section>
+
 
 
     </section>
