--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
       <h3>Why Naukri Saathi?</h3>
       <ul>
         <li>🎯 All exam info in one place — no need to search blindly</li>
-        <li>📚 Only free & official sources (no fake or paid links)</li>
+        <li>📚 Only free & official sources </li>
         <li>📱 Works on phones even with slow internet</li>
         <li>❤️ Built for students from small towns, Assam & beyond</li>
       </ul>
@@ -43,7 +43,7 @@
       <div class="job-links">
         <div class="job-box">
           <h4>📘 Class 10 Jobs</h4>
-          <p>12+ government exams including Police, Railways, Army</p>
+          <p>Government exams including Police, Railways, Army</p>
           <a href="class10.html">Explore →</a>
         </div>
         <div class="job-box">
@@ -63,7 +63,7 @@
       <h3>What You Get</h3>
       <ul>
         <li>✅ PDF download links</li>
-        <li>✅ Free YouTube videos & playlists (Adda247, Ankit, etc.)</li>
+        <li>✅ Free YouTube videos & playlists</li>
         <li>✅ Previous year papers (PYQs)</li>
         <li>✅ Syllabus, eligibility, tips to crack</li>
       </ul>
@@ -71,7 +71,7 @@
 
     <section>
       <h3>About Naukri Saathi</h3>
-      <p>We built Naukri Saathi while working with rural students in Assam. They didn’t have coaching, internet or time to waste. This platform gives them one clutter-free, free, trustworthy place to begin and succeed.</p>
+      <p>We built Naukri Saathi while working with rural students in Assam. This platform gives them one clutter free, free, trustworthy place to begin and succeed.</p>
     </section>
   </main>
 
