--- a/Index.html
+++ b/Index.html
@@ -3,125 +3,119 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Naukri Saathi - Government Jobs by Eligibility</title>
+  <title>Naukri Saathi</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f9f5e7; /* Light beige paper-like background */
+      background: #faf8f3; /* paper-like background */
     }
     header {
-      background-color: #2c3e50;
-      color: white;
-      padding: 1.5rem 1rem;
       text-align: center;
-      position: relative;
+      padding: 1.5rem;
+      background: #2a6f97;
+      color: white;
     }
-    #google_translate_element {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-    }
-    h1 {
+    header h1 {
       margin: 0;
     }
     .container {
-      max-width: 1000px;
+      width: 90%;
+      max-width: 900px;
       margin: auto;
-      padding: 1rem;
     }
-    .eligibility-section {
+    nav {
+      display: flex;
+      justify-content: space-around;
+      background: #dbe7e4;
+      padding: 1rem;
+      border-radius: 8px;
+      margin: 1rem 0;
+    }
+    nav a {
+      text-decoration: none;
+      color: #023047;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .section {
       background: white;
       padding: 1rem;
-      margin-bottom: 1.5rem;
+      margin: 1rem 0;
       border-radius: 8px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-    .eligibility-section h2 {
+    .section h2 {
       margin-top: 0;
     }
-    .eligibility-section p {
-      margin-bottom: 0.8rem;
-      color: #333;
-    }
-    .exam-list {
-      margin-left: 1rem;
-    }
-    .cta-button {
-      display: inline-block;
-      background-color: #27ae60;
-      color: white;
-      padding: 0.6rem 1.2rem;
-      border-radius: 5px;
-      text-decoration: none;
-      font-weight: bold;
-      margin-top: 0.8rem;
-    }
     footer {
-      background-color: #2c3e50;
-      color: white;
       text-align: center;
       padding: 1rem;
+      background: #2a6f97;
+      color: white;
       margin-top: 2rem;
+    }
+    #google_translate_element {
+      margin-top: 0.5rem;
     }
   </style>
 </head>
 <body>
+
   <header>
-    <h1>Naukri Saathi</h1>
-    <p>Your Friend in the Journey to a Government Job</p>
+    <h1>📘 Naukri Saathi</h1>
+    <p>Your friend in the journey to a government job</p>
     <div id="google_translate_element"></div>
-    <a href="#" class="cta-button">Join Telegram/WhatsApp Group</a>
   </header>
 
-  <main class="container">
+  <div class="container">
+    <p style="text-align:center;">
+      Choose your language above: Assamese (অসমীয়া), Bodo (बर’), Hindi (हिन्दी)
+    </p>
 
-    <div class="eligibility-section">
-      <h2>📚 After Class 10</h2>
-      <p>Government jobs you can apply for right after matriculation. Great for starting your career early.</p>
-      <ul class="exam-list">
-        <li>SSC MTS – Office helper roles</li>
-        <li>SSC GD Constable – Police jobs in CAPFs</li>
-        <li>Railway Group D – Track maintainer, helper</li>
+    <nav>
+      <a href="class10.html">📚 Class 10 Jobs</a>
+      <a href="class12.html">🎓 Class 12 Jobs</a>
+      <a href="graduation.html">🎯 Graduation Jobs</a>
+    </nav>
+
+    <div class="section">
+      <h2>🌟 Why Naukri Saathi?</h2>
+      <ul>
+        <li>Free job updates for students in Bodoland & Assam</li>
+        <li>Official notifications and syllabus PDFs</li>
+        <li>YouTube playlists for easy learning</li>
+        <li>Simple tips to crack exams</li>
       </ul>
-      <a href="class10.html" class="cta-button">View All Jobs</a>
     </div>
 
-    <div class="eligibility-section">
-      <h2>🎓 After Class 12</h2>
-      <p>Jobs with better pay and more responsibilities. Perfect for intermediate graduates.</p>
-      <ul class="exam-list">
-        <li>SSC CHSL – Clerk, DEO, Postal Assistant</li>
-        <li>RRB NTPC – Railway clerk and guard</li>
-        <li>Defence Agniveer – Air Force & Navy roles</li>
-      </ul>
-      <a href="class12.html" class="cta-button">View All Jobs</a>
+    <div class="section">
+      <h2>🚀 How to Use?</h2>
+      <ol>
+        <li>Click your class level above (Class 10 / 12 / Graduation)</li>
+        <li>Read about the exams and jobs</li>
+        <li>Download free syllabus and previous year papers</li>
+        <li>Join our group for updates</li>
+      </ol>
     </div>
-
-    <div class="eligibility-section">
-      <h2>🎓 After Graduation</h2>
-      <p>High-level competitive exams for central and state government posts.</p>
-      <ul class="exam-list">
-        <li>UPSC Civil Services – IAS, IPS, IFS</li>
-        <li>SSC CGL – Income Tax Inspector, Auditor</li>
-        <li>Bank PO – SBI & IBPS Probationary Officer</li>
-      </ul>
-      <a href="graduation.html" class="cta-button">View All Jobs</a>
-    </div>
-
-  </main>
+  </div>
 
   <footer>
-    <p>© 2025 Naukri Saathi | All resources are free & official</p>
+    <p>© 2025 Naukri Saathi | All resources free & official</p>
   </footer>
 
-  <!-- Google Translate Script -->
   <script type="text/javascript">
     function googleTranslateElementInit() {
       new google.translate.TranslateElement(
-        {pageLanguage: 'en'},
+        {
+          pageLanguage: 'en',
+          includedLanguages: 'as,brx,hi',
+          layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+        },
         'google_translate_element'
       );
     }
