--- a/Index.html
+++ b/Index.html
@@ -74,7 +74,7 @@
 
   <div class="container">
     <p style="text-align:center;">
-      Choose your language above: Assamese (অসমীয়া), Bodo (बर’), Hindi (हिन्दी)
+      Choose your language above: Assamese (অসমীয়া), Hindi (हिन्दी) or English
     </p>
 
     <nav>
@@ -113,7 +113,7 @@
       new google.translate.TranslateElement(
         {
           pageLanguage: 'en',
-          includedLanguages: 'as,brx,hi',
+          includedLanguages: 'as,hi,eng',
           layout: google.translate.TranslateElement.InlineLayout.SIMPLE
         },
         'google_translate_element'
@@ -124,3 +124,4 @@
 
 </body>
 </html>
+
