--- a/Index.html
+++ b/Index.html
@@ -74,7 +74,7 @@
 
   <div class="container">
     <p style="text-align:center;">
-      Choose your language above: Assamese (অসমীয়া), Hindi (हिन्दी) or English
+      Choose your language above: Assamese (অসমীয়া), Hindi (हिन्दी)
     </p>
 
     <nav>
@@ -108,20 +108,22 @@
     <p>© 2025 Naukri Saathi | All resources free & official</p>
   </footer>
 
-  <script type="text/javascript">
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement(
-        {
-          pageLanguage: 'en',
-          includedLanguages: 'as,hi,eng',
-          layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-        },
-        'google_translate_element'
-      );
-    }
-  </script>
-  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement(
+      {
+        pageLanguage: 'en',
+        includedLanguages: 'as,hi',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+      },
+      'google_translate_element'
+    );
+  }
+</script>
+<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 
 </body>
 </html>
+
 
