--- a/class10.html
+++ b/class10.html
@@ -6,6 +6,11 @@
   <title>Class 10 Govt Jobs - Naukri Saathi</title>
   <link rel="stylesheet" href="style.css" />
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #faf7f0;
+      line-height: 1.6;
+    }
     table {
       width: 100%;
       border-collapse: collapse;
@@ -19,22 +24,40 @@
     th {
       background-color: #f2f2f2;
     }
+    tr:nth-child(even) {
+      background-color: #f9f9f9;
+    }
     ul.job-summary {
       list-style-type: none;
       padding-left: 0;
     }
     ul.job-summary li {
-      margin-bottom: 0.4rem;
+      margin-bottom: 0.8rem;
+      background: #fff;
+      padding: 10px;
+      border-radius: 5px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     }
     h3, h4 {
       margin-top: 2rem;
+      color: #2a4d69;
+    }
+    .search-bar {
+      margin: 20px 0;
+      text-align: center;
+    }
+    .search-bar input {
+      padding: 8px;
+      width: 80%;
+      border: 1px solid #ccc;
+      border-radius: 5px;
     }
   </style>
 </head>
 <body>
+
   <header>
     <div id="google_translate_element" style="text-align: right; margin: 20px;"></div>
-
     <div class="container">
       <h1>📘 Class 10 Government Jobs</h1>
       <p>Explore Sarkari Naukri options after Class 10 with free resources, videos, PDFs and tips</p>
@@ -42,37 +65,42 @@
     </div>
   </header>
 
+  <!-- Search Bar -->
+  <div class="search-bar">
+    <input type="text" id="searchInput" placeholder="Search exams..." onkeyup="searchJobs()">
+  </div>
+
   <main class="container">
     <section>
       <h2>📚 Key Exams After Class 10</h2>
-      <p>After you pass Class 10 (Matriculation), there are many government exams you can try for. These exams help you get good jobs in the central government or your state. Below is a list of popular exams that only need Class 10 pass to apply.</p>
+      <p>After you pass Class 10 (Matriculation), there are many government exams you can try for. These exams help you get good jobs in the central government or your state.</p>
 
       <h3>🏛️ Central Level Exams (All India)</h3>
-      <ul class="job-summary">
-        <li><strong><a href="ssc-mts.html">1. SSC MTS & Havaldar</a></strong><br>➡️ Office helper jobs and Havaldar posts in central government departments.<br>✅ Class 10 pass<br>🌍 All over India<br>💰 Salary (Per Month): ₹23,000–₹25,000</li>
-        <li><strong>2. SSC GD Constable:</strong><br>➡️ Join BSF, CRPF, CISF, ITBP, SSB, or SSF as a police constable.<br>✅ Class 10 pass<br>💪 Physical test needed<br>💰 Salary (Per Month): ₹30,000–₹32,000</li>
-        <li><strong>3. RRB Group D:</strong><br>➡️ Jobs in Indian Railways like helper, track maintainer, porter, etc.<br>✅ Class 10 pass<br>🚆 Good for railway job lovers<br>💰 Salary (Per Month): ₹22,000–₹25,000</li>
-        <li><strong>4. Indian Post GDS (Gramin Dak Sevak)</strong><br>➡️ Post office jobs in villages and towns.<br>✅ Class 10 pass with good marks in Maths & English<br>📬 No exam – selection by marks<br>💰 Salary (Per Month): ₹10,000–₹14,500</li>
-        <li><strong>5. Army Agniveer (Soldier GD, Tradesman)</strong><br>➡️ Soldier General Duty (GD) and Tradesman roles.<br>✅ Class 10 pass for GD & Tradesman<br>📋 Physical + written test<br>💰 Salary (Per Month): ₹30,000–₹40,000</li>
-        <li><strong>6. Navy Agniveer (MR) (Class 10 pass only)</strong><br>➡️ Matric Recruit posts like cook, steward, sailor.<br>✅ Class 10 pass<br>🚢 Physical + written test<br>💰 Salary (Per Month): ₹30,000–₹40,000</li>
-        <li><strong>7. Air Force Agniveer Vayu (Non-Science Group)</strong><br>➡️ Trades and support roles (like logistics, admin).<br>✅ Class 10 pass<br>✈️ Physical + written test<br>💰 Salary (Per Month): ₹30,000–₹40,000</li>
+      <ul class="job-summary" id="examList">
+        <li><strong><a href="ssc-mts.html">1. SSC MTS & Havaldar</a></strong><br>➡️ Office helper jobs & Havaldar posts in central govt departments.<br>✅ Class 10 pass<br>🌍 All India<br>💰 ₹23,000–₹25,000/month</li>
+        <li><strong><a href="ssc-gd.html">2. SSC GD Constable</a></strong><br>➡️ Join BSF, CRPF, CISF, ITBP, SSB, or SSF.<br>✅ Class 10 pass<br>💪 Physical test needed<br>💰 ₹30,000–₹32,000/month</li>
+        <li><strong><a href="rrb-group-d.html">3. RRB Group D</a></strong><br>➡️ Railway jobs like helper, track maintainer, porter.<br>✅ Class 10 pass<br>🚆 Railway lovers<br>💰 ₹22,000–₹25,000/month</li>
+        <li><strong><a href="gds.html">4. Indian Post GDS</a></strong><br>➡️ Post office jobs in villages/towns.<br>✅ Class 10 pass with good marks in Maths & English<br>📬 No exam<br>💰 ₹10,000–₹14,500/month</li>
+        <li><strong><a href="army-agniveer.html">5. Army Agniveer</a></strong><br>➡️ Soldier GD & Tradesman roles.<br>✅ Class 10 pass<br>📋 Physical + written test<br>💰 ₹30,000–₹40,000/month</li>
+        <li><strong><a href="navy-agniveer.html">6. Navy Agniveer (MR)</a></strong><br>➡️ Matric Recruit posts like cook, steward.<br>✅ Class 10 pass<br>🚢 Physical + written test<br>💰 ₹30,000–₹40,000/month</li>
+        <li><strong><a href="airforce-agniveer.html">7. Air Force Agniveer Vayu</a></strong><br>➡️ Trades/support roles.<br>✅ Class 10 pass<br>✈️ Physical + written test<br>💰 ₹30,000–₹40,000/month</li>
       </ul>
 
       <br>
 
       <h3>🌾 Assam State Level Exams</h3>
       <ul class="job-summary">
-        <li><strong>8. Assam Direct Recruitment – Grade IV</strong><br>➡️ Peon, Chowkidar, Driver, etc. in state govt. offices.<br>✅ Class 8 or 10 pass<br>🏢 No special skill needed<br>💰 Salary (Per Month): ₹17,000–₹20,000</li>
-        <li><strong>9. Assam Police Grade IV Jobs</strong><br>➡️ Peon, Chowkidar, Driver in Assam Police.<br>✅ Class 10 pass<br>🚓 Physical + written test<br>💰 Salary (Per Month): ₹18,000–₹21,000</li>
-        <li><strong>10. Assam Forest Guard / AFPF Constable</strong><br>➡️ Guard forests and wildlife in Assam.<br>✅ Class 10 pass (Forest Guard)<br>🌲 Physical + written test<br>💰 Salary (Per Month): ₹22,000–₹25,000</li>
-        <li><strong>11. Excise Constable (Assam)</strong><br>➡️ Police-type job in Assam Excise Dept.<br>✅ Class 10 pass<br>🔍 Written + Physical test<br>💰 Salary (Per Month): ₹22,000–₹25,000</li>
-        <li><strong>12. Home Guard Volunteer (Assam)</strong><br>➡️ Assist police during events and emergencies.<br>✅ Class 10 pass<br>🎽 Physical fitness test only<br>💰 Salary (Per Month): ₹9,000–₹11,000</li>
+        <li><strong><a href="assam-dr.html">8. Assam Direct Recruitment – Grade IV</a></strong><br>➡️ Peon, Chowkidar, Driver, etc.<br>✅ Class 8/10 pass<br>🏢 No special skill<br>💰 ₹17,000–₹20,000/month</li>
+        <li><strong><a href="assam-police.html">9. Assam Police Grade IV</a></strong><br>➡️ Peon, Chowkidar, Driver.<br>✅ Class 10 pass<br>🚓 Physical + written test<br>💰 ₹18,000–₹21,000/month</li>
+        <li><strong><a href="assam-forest.html">10. Assam Forest Guard / AFPF Constable</a></strong><br>➡️ Protect forests/wildlife.<br>✅ Class 10 pass<br>🌲 Physical + written test<br>💰 ₹22,000–₹25,000/month</li>
+        <li><strong><a href="excise-constable.html">11. Excise Constable</a></strong><br>➡️ Excise Dept jobs.<br>✅ Class 10 pass<br>🔍 Written + Physical test<br>💰 ₹22,000–₹25,000/month</li>
+        <li><strong><a href="home-guard.html">12. Home Guard Volunteer</a></strong><br>➡️ Assist police.<br>✅ Class 10 pass<br>🎽 Physical fitness test<br>💰 ₹9,000–₹11,000/month</li>
       </ul>
 
       <br>
 
       <h3>📅 When to Apply? (Class 10 Pass Jobs)</h3>
-      <p>This is a simple guide to help you remember when these exams usually happen. Dates may change every year, but this is what happened in the past few years.</p>
+      <p>These are usual timelines based on past years. They may change each year.</p>
 
       <h4>🇮🇳 Central Government Jobs</h4>
       <table>
@@ -99,8 +127,6 @@
           <tr><td>Home Guard Volunteer</td><td>By District</td><td>Local enrol</td><td>❌ No exam</td></tr>
         </tbody>
       </table>
-
-      <p><strong>🎯 Tip:</strong> Make your own calendar in your notebook to never miss any job opportunity.</p>
     </section>
   </main>
 
@@ -109,19 +135,30 @@
       <p>© 2025 Naukri Saathi | All resources are free & official</p>
     </div>
   </footer>
-<!-- Google Translate scripts -->
-<script type="text/javascript">
-  function googleTranslateElementInit() {
-    new google.translate.TranslateElement({
-      pageLanguage: 'en',
-      includedLanguages: 'en,as,hi,bn',
-      layout: google.translate.TranslateElement.InlineLayout.SIMPLE
-    }, 'google_translate_element');
-  }
-</script>
-<script type="text/javascript"
-  src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-</script>
+
+  <!-- Search Script -->
+  <script>
+    function searchJobs() {
+      let input = document.getElementById("searchInput").value.toLowerCase();
+      let jobs = document.getElementById("examList").getElementsByTagName("li");
+      for (let i = 0; i < jobs.length; i++) {
+        let text = jobs[i].textContent.toLowerCase();
+        jobs[i].style.display = text.includes(input) ? "" : "none";
+      }
+    }
+  </script>
+
+  <!-- Google Translate -->
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'en',
+        includedLanguages: 'as,hi',
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+      }, 'google_translate_element');
+    }
+  </script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </body>
 </html>
