--- a/Index.html
+++ b/Index.html
@@ -3,136 +3,228 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Naukri Saathi - Your Sarkari Job Guide</title>
+  <title>Naukri Saathi</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f8fafc;
-      margin: 0;
-      padding: 0;
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Naukri Saathi - Your Sarkari Job Guide</title>
+  <link rel="stylesheet" href="style.css">
+<style>
+body {
+font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+margin: 0;
+padding: 0;
+      background: #faf8f3; /* paper-like background */
       color: #333;
-    }
-    header {
-      background-color: #0077b6;
-      color: white;
+}
+header {
+      text-align: center;
+      padding: 1.5rem;
+      background: #2a6f97;
+      background-color: #4CAF50;
+color: white;
       padding: 1.5rem 1rem;
       text-align: center;
-    }
-    header h1 {
-      margin: 0;
+}
+header h1 {
+margin: 0;
       font-size: 2rem;
-    }
-    header p {
-      margin: 0.5rem 0 0;
-      font-size: 1.1rem;
-    }
-    nav {
-      margin: 2rem auto;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-      justify-content: center;
-    }
-    nav a {
-      background: #0096c7;
-      color: white;
-      padding: 0.8rem 1.2rem;
-      border-radius: 6px;
-      text-decoration: none;
-      font-size: 1rem;
-      transition: background 0.3s;
-    }
-    nav a:hover {
-      background: #023e8a;
-    }
+}
     .container {
+      width: 90%;
       max-width: 900px;
       margin: auto;
-      padding: 1rem;
-    }
-    .tip-box {
-      background: #fff3cd;
-      border: 2px solid #ffec99;
-      padding: 10px 15px;
-      border-radius: 6px;
-      margin: 15px auto;
-      max-width: 500px;
-      font-size: 1.05em;
+    header p {
+      margin-top: 0.5rem;
+}
+    nav {
       display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-    footer {
-      background: #e9ecef;
-      text-align: center;
+      justify-content: space-around;
+      background: #dbe7e4;
       padding: 1rem;
-      margin-top: 2rem;
-      font-size: 0.9rem;
+      border-radius: 8px;
+      margin: 1rem 0;
+    .translate-bar {
+      margin: 1rem auto;
+      text-align: center;
+}
+    nav a {
+      text-decoration: none;
+      color: #023047;
+      font-weight: bold;
+    .search-box {
+      text-align: center;
+      margin: 1.5rem auto;
+}
+    nav a:hover {
+      text-decoration: underline;
+    .search-box input {
+      width: 80%;
+      max-width: 500px;
+      padding: 0.7rem;
+      border-radius: 25px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+}
+    .section {
+      background: white;
+    .categories {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1rem;
+padding: 1rem;
+      margin: 1rem 0;
+      border-radius: 8px;
     }
-  </style>
+    .category-card {
+      background-color: white;
+      padding: 1.5rem;
+      border-radius: 10px;
+      text-align: center;
+box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      cursor: pointer;
+      transition: transform 0.2s;
+}
+    .section h2 {
+    .category-card:hover {
+      transform: scale(1.05);
+    }
+    .category-card h3 {
+margin-top: 0;
+      color: #4CAF50;
+    }
+    .notice-board {
+      background: #fff3cd;
+      padding: 1rem;
+      margin: 1rem;
+      border: 1px solid #ffeeba;
+      border-radius: 8px;
+}
+footer {
+      background-color: #333;
+      color: white;
+text-align: center;
+padding: 1rem;
+      background: #2a6f97;
+      color: white;
+margin-top: 2rem;
+}
+    #google_translate_element {
+      margin-top: 0.5rem;
+    }
+</style>
 </head>
 <body>
 
-  <!-- Google Translate -->
-  <div id="google_translate_element" style="text-align: right; margin: 10px;"></div>
-
-  <header>
+<header>
     <h1>📘 Naukri Saathi</h1>
-    <p>Your friend in finding government jobs after school</p>
-  </header>
-
-  <!-- Language Tip Box -->
-  <div class="tip-box">
-    <span style="font-size:1.5em;">⬅️</span>
-    <span><strong>Tip:</strong> Use this button to read in <strong>Assamese</strong> or <strong>Hindi</strong>.</span>
-  </div>
+    <p>Your friend in the journey to a government job</p>
+    <div id="google_translate_element"></div>
+    <h1>Naukri Saathi</h1>
+    <p>Your Friend in the Journey to a Government Job</p>
+</header>
 
   <div class="container">
-    <p>
-      Welcome to <strong>Naukri Saathi</strong> – a simple guide for students and job seekers in Assam & Bodoland.  
-      Here, you will find **trusted, official, and free resources** for government job exams.  
-      Whether you just passed Class 10, Class 12, or Graduation – there’s a path for you.
+    <p style="text-align:center;">
+      Choose your language above: Assamese (অসমীয়া), Hindi (हिन्दी)
     </p>
-    <p>
-      We know many of you prefer learning in Assamese or Hindi. That’s why we’ve added a simple language switch at the top.  
-      We also give links to YouTube classes, PDFs, and important dates – so you don’t miss any opportunity.
-    </p>
+  <div class="translate-bar" id="google_translate_element"></div>
+
+    <nav>
+      <a href="class10.html">📚 Class 10 Jobs</a>
+      <a href="class12.html">🎓 Class 12 Jobs</a>
+      <a href="graduation.html">🎯 Graduation Jobs</a>
+    </nav>
+  <div class="search-box">
+    <input type="text" placeholder="Search for jobs, exams, or resources...">
   </div>
 
-  <nav>
-    <a href="class10.html">📚 Jobs After Class 10</a>
-    <a href="class12.html">📗 Jobs After Class 12</a>
-    <a href="graduation.html">📙 Jobs After Graduation</a>
-  </nav>
+    <div class="section">
+      <h2>🌟 Why Naukri Saathi?</h2>
+      <ul>
+        <li>Free job updates for students in Bodoland & Assam</li>
+        <li>Official notifications and syllabus PDFs</li>
+        <li>YouTube playlists for easy learning</li>
+        <li>Simple tips to crack exams</li>
+      </ul>
+  <section class="categories">
+    <div class="category-card" onclick="location.href='class10.html'">
+      <h3>📚 Class 10 Jobs</h3>
+      <p>Government jobs you can apply after Class 10.</p>
+</div>
 
-  <div class="container">
-    <h2>Why Use Naukri Saathi?</h2>
-    <ul>
-      <li>✅ Free & official study materials</li>
-      <li>✅ Easy to read in your own language</li>
-      <li>✅ Simple guidance for rural youth</li>
-      <li>✅ Covers central & Assam state jobs</li>
-    </ul>
+    <div class="section">
+      <h2>🚀 How to Use?</h2>
+      <ol>
+        <li>Click your class level above (Class 10 / 12 / Graduation)</li>
+        <li>Read about the exams and jobs</li>
+        <li>Download free syllabus and previous year papers</li>
+        <li>Join our group for updates</li>
+      </ol>
+    <div class="category-card" onclick="location.href='class12.html'">
+      <h3>📘 Class 12 Jobs</h3>
+      <p>Opportunities after passing Class 12.</p>
+</div>
   </div>
+    <div class="category-card" onclick="location.href='graduation.html'">
+      <h3>🎓 Graduation Jobs</h3>
+      <p>Jobs for degree holders.</p>
+    </div>
+    <div class="category-card" onclick="location.href='scholarships.html'">
+      <h3>💰 Scholarships</h3>
+      <p>Free education funding opportunities.</p>
+    </div>
+    <div class="category-card" onclick="location.href='skills.html'">
+      <h3>🛠 Skill Training</h3>
+      <p>Government skill development programs.</p>
+    </div>
+  </section>
 
-  <footer>
-    <p>© 2025 Naukri Saathi | Made with ❤️ for the youth of Assam & Bodoland</p>
-  </footer>
+  <section class="notice-board">
+    <h3>📢 Notice Board</h3>
+    <p>No new updates yet. Stay tuned!</p>
+  </section>
 
-  <!-- Google Translate Scripts -->
+<footer>
+    <p>© 2025 Naukri Saathi | All resources free & official</p>
+    <p>© 2025 Naukri Saathi | Visits: <span id="visitorCount">0</span></p>
+</footer>
+
+<script type="text/javascript">
+  function googleTranslateElementInit() {
+    new google.translate.TranslateElement(
+      {
+  <!-- Visitor Counter -->
+  <script src="https://api.countapi.xyz/hit/naukri-saathi/visits?callback=cb"></script>
+  <script>
+    function cb(response) {
+      document.getElementById('visitorCount').innerText = response.value;
+    }
+  </script>
+
+  <!-- Google Translate -->
   <script type="text/javascript">
     function googleTranslateElementInit() {
       new google.translate.TranslateElement({
-        pageLanguage: 'en',
-        includedLanguages: 'en,as,hi',
-        layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+pageLanguage: 'en',
+includedLanguages: 'as,hi',
+layout: google.translate.TranslateElement.InlineLayout.SIMPLE
+      },
+      'google_translate_element'
+    );
+  }
+</script>
+<script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+
       }, 'google_translate_element');
     }
   </script>
-  <script type="text/javascript"
-    src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-  </script>
-
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
+
+
+  </html>
+  
