--- a/Index.html
+++ b/Index.html
@@ -143,5 +143,14 @@
     }
   </script>
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+<script>
+fetch('https://api.countapi.xyz/hit/naukri-saathi/landingpage')
+  .then(res => res.json())
+  .then(res => {
+    document.getElementById('visits').innerText = res.value;
+  });
+</script>
+
 </body>
 </html>
+
